# server.js
@@ -4,16 +4,24 @@ const cors = require('cors');
 const morgan = require('morgan');
 const path = require('path');
 const swaggerUi = require('swagger-ui-express')
+const logger = require('./logger')
+const bodyParser = require('body-parser')
 
 const app = express();
+app.use(bodyParser.json())
+app.use(morgan('combined', {
+    stream: logger.stream
+}))
+
 const backendRoute = express.Router();
 
 const indexApi = require('./apis/index');
 const postApi = require('./apis/post/postApi');
-
+const productApi = require('./apis/product/productApi');
 
 backendRoute.use('/', indexApi);
 backendRoute.use('/post',postApi);
+backendRoute.use('/product',productApi);
 
 
 
@@ -33,7 +41,6 @@ app.use(function (err, req, res, next) {
     res.locals.error = req.app.get('env') === 'development' ? err : {}
 
     logger.error(`${err.status || 500} - ${err.message} - ${req.originalUrl} -${req.method} - ${req.ip}`)
-
 
     res.status(err.status || 500)
 
